--- a/Djikstra/makefile
+++ b/Djikstra/makefile
@@ -1,13 +1,13 @@
-all: compile execute1 execute2 execute3
+all: execute1 execute2 execute3
 
 compile: 
 	gcc djikstra.c -o djikstra
 
-execute1: 
+execute1: compile
 	./djikstra -f exemplo.txt -i 1 -l 5
 
-execute2: 
+execute2: compile
 	./djikstra -f exemplo.txt -i 1
 
-execute3: 
+execute3: compile
 	./djikstra -f -s exemplo.txt -i 1
