--- a/Djikstra/makefile
+++ b/Djikstra/makefile
@@ -1,7 +1,10 @@
-all: execute1 execute2 execute3
+all: help execute1 execute2 execute3
 
 compile: 
 	gcc djikstra.c -o djikstra
+
+help: compile
+	./djikstra -h
 
 execute1: compile
 	./djikstra -f exemplo.txt -i 1 -l 5
