--- a/Djikstra/makefile
+++ b/Djikstra/makefile
@@ -1,4 +1,4 @@
-all: help execute1 execute2
+all: help execute1 execute2 execute3
 
 compile: 
 	gcc djikstra.c -o djikstra
@@ -11,3 +11,6 @@ execute1: compile
 
 execute2: compile
 	./djikstra -f exemplo.txt -i 1
+
+execute3: compile
+	./djikstra -f -s exemplo.txt -i 1 -l 5
